# rust-download-tables

./: .env  Cargo.toml
frontend/my-download/: index.html  package-lock.json  package.json
frontend/my-download/src/: App.jsx
src/: main.rs
src/controllers/: download_controller.rs  mod.rs
src/db/: mod.rs
src/models/: mod.rs  signup.rs  student.rs
src/repository/: student_repo.rs
src/routes/: download_routes.rs  mod.rs
src/services/: download_service.rs
static/: index.html
