[package]
name = "student_download_app"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

once_cell = "1.19.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

csv = "1.3"

rust_xlsxwriter = "0.64.0"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["serde", "v4"] }

tower-http = { version = "0.5", features = ["cors", "fs"] }
