[package]
name = "student_download_app"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rust_xlsxwriter = "0.64.0"
chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.5", features = ["cors", "fs"] }
printpdf = "0.6.0"
http = "0.2"


